--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -32,3 +32,8 @@
 .radio span{
     margin-right: 60px;
 }
+.navigate{
+    margin: 30px;
+    display: flex;
+    justify-content: space-between;
+}
